--- a/Real world Exploratory Data Analysis Example.ipynb
+++ b/Real world Exploratory Data Analysis Example.ipynb
@@ -821,7 +821,9 @@
     "## Finding attributes correlation\n",
     "\n",
     "**Note:** *correlation does not imply causation* \n",
-    "> If like me you want more info about this, please visit: https://en.wikipedia.org/wiki/Correlation_does_not_imply_causation#:~:text=The%20phrase%20%22correlation%20does%20not,association%20or%20correlation%20between%20them."
+    "> If like me you want more info about this, please visit:\n",
+    "\n",
+    ">https://en.wikipedia.org/wiki/Correlation_does_not_imply_causation#:~:text=The%20phrase%20%22correlation%20does%20not,association%20or%20correlation%20between%20them."
    ]
   },
   {
