--- a/Real world Exploratory Data Analysis Example.ipynb
+++ b/Real world Exploratory Data Analysis Example.ipynb
@@ -1021,8 +1021,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### In fact, we can measure the strength of correlation between variables\n",
-    "> *In this notebook, we are going to use what's known as *Pearson Correlation**.\n",
+    "### Measure the strength of correlation between variables\n",
+    "> *In this notebook, we are going to use what's known as *Pearson Correlation**. Below is a link for more information.\n",
+    "\n",
+    "> https://support.minitab.com/en-us/minitab-express/1/help-and-how-to/modeling-statistics/regression/how-to/correlation/methods-and-formulas/\n",
+    "\n",
     ">> The Pearson methods returns two parameters :\n",
     ">> - Correlation coefficient (ranges between -1 and 1)\n",
     ">> - P-value (Weighs the certainty about the correlation)\n",
