--- a/Real world Data Science Tasks (EDA).ipynb
+++ b/Real world Data Science Tasks (EDA).ipynb
@@ -263,6 +263,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style='color: brown; font-weight: bold'>*Sometimes, pandas import does not infer correctly the type of the attribute data, so additionnal processing is necessary.One can refer to the links below for more informations*.</span>\n",
+    "<br>\n",
+    "To convert attribute type in pandas, one can refer to the link below : <br>\n",
+    "><a target=\"_blank\">https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.astype.html</a>\n",
+    " <br>\n",
+    "    Other links that seem interesting to take a look at :\n",
+    "    <br />\n",
+    "     >><a target=\"_blank\">https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.convert_dtypes.html</a>\n",
+    "    <br />\n",
+    "    >><a target=\"_blank\">https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.infer_objects.html</a>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### I want to identify all columns that contain null value to deal with"
    ]
   },
@@ -830,7 +846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Let's try to see a correlation between the engine size and the price of a car"
+    "##### Correlation between the engine size and the price of a car from visualization"
    ]
   },
   {
@@ -877,7 +893,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Now let's see a correlation between the highway miles per gallon and the price"
+    "#### Correlation between the highway miles per gallon and the price"
    ]
   },
   {
@@ -927,7 +943,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Let's see a correlation between the compression ratio and the price** "
+    "**Correlation between the compression ratio and the price** "
    ]
   },
   {
@@ -999,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [
     {
