--- a/Car price prediction.ipynb
+++ b/Car price prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-success alertdanger\" style=\"margin-top: 20px\">\n",
-    "<h3> Preprocessing functions already explored in the EDA notebook in this repository. </h3>\n",
+    "<h3> Functions for preprocessing, already explored in the EDA notebook in this repository. </h3>\n",
     "\n",
     "</div>\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "<AxesSubplot:xlabel='price', ylabel='Density'>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,24 +190,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "numerical_data=cleaned_car.select_dtypes(exclude=['object'])\n",
-    "y = numerical_data.pop('price')\n",
-    "X_num_attributes = numerical_data[numerical_data.columns]"
+    "y = numerical_data.pop('price')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 87,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "predicted_price, r_score = multiple_linear_reg(X_num_attributes, y)"
+    "predicted_price, r_score = multiple_linear_reg(numerical_data, y)"
    ]
   },
   {
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +245,7 @@
        "<AxesSubplot:xlabel='price', ylabel='Density'>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -270,11 +269,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    " <h3>Model Evaluation</h3>\n",
+    "\n",
+    "<p>The visualization evaluation shows that a multiple regression would be a good predictor than the simple one.</p>"
+   ]
   }
  ],
  "metadata": {
