--- a/exploratory data analysis (EDA).ipynb
+++ b/exploratory data analysis (EDA).ipynb
@@ -279,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### I want to identify all columns that contain null value to deal with"
+    "#### Identify all columns that contain null value to deal with"
    ]
   },
   {
